fix z-index issue on browse

--- a/app/assets/stylesheets/browse/top-movie.scss
+++ b/app/assets/stylesheets/browse/top-movie.scss
@@ -5,7 +5,7 @@
 
 .top-movie h1 {
     width: 30%;
-    z-index: 4;
+    
     position: relative;
     top: -50vh;
     font-size: 40px;
@@ -15,7 +15,7 @@
 }
 
 .top-movie-btns {
-   z-index: 4;
+   
     position: relative;
     top: -45vh;
     display: flex;
